# axum-template

./: .env  .env.example  .env.prod  Cargo.toml  Dockerfile  README.md  build.rs  compose.yml  telegraf.conf
.sqlx/: query-0290d70d719afeda05e78b8890934dd794a75251d06f860cff4c5e99c9c44555.json  query-0b892851188ee16176f6e2de628619b14743b520b0b74eb87c0bc7f752911c33.json  query-195f1becb2bffb1887d622852e3c9549c3f05c43e609ee901908de1b7dc61a09.json  query-1c8955adaf010c1664c2443ec363091a21be7bc5a88a4747ede683d686d979dd.json  query-44996cf2d9b308bd9f2ae96b6bdbafa7816d59c8d46ff17776741d753681b836.json  query-482971840de4db56200ff08275d699dd6410248e9fe42fb1aeeae448b41a2f36.json  query-5bb234e3871571702a9f92f753d6ddb665e24315d27f2b35fcfc96c79dd730f0.json  query-643df992bc6c8a70f03e72eb4c9c059096cdf597f899dd3d50d7e289a7fbe444.json  query-6ea8f19e9ec64b5045a587c7d4c46bb8af21ab4bc7a92e9dc53dc057eb25c4d4.json  query-92dea0d0a65d88f1d6bd2b6140203d56bfa68dc74baa11bf0a82cea04df594e5.json  query-96b701a8050b9c4fa2cb077fb0f2a2c4dd93830d79f069dbe5cc265216c77fcc.json  query-990b565e637629389fbaff6c3bfff4947a399bb505a48b847bd97874551c4611.json  query-a947e0e459ae001a549d8a7e4182554326d32c44cfaa80b97c052b582ff7bdee.json  query-ad3701e4b9273d21b72ebedbea03cab2bf2296584e82ba950890b5775d43da76.json  query-bbd642a933481c53f6f4111e3562491b67f3010c801bb562a3968b3963c50013.json  query-d09d28996089c59f164f11d988ed14529b64ba706c9f3a291ec6cc57638b4c8b.json  query-d5c3797e9fd6366eb66a389dec66ef9bed654ce4ea419d1a34573b29636afbd1.json  query-e5624c65ab8248f1fcf973c0c7501792d53748dbd5d227e492527f07ca194fc6.json
docs/: README.md
macros/: Cargo.toml
macros/src/: lib.rs  model.rs  route.rs
migrations/: 00000000000000_init.sql  20240419020144_init.sql  20240519201712_add_api_key.sql
src/: cookie.rs  error.rs  extract.rs  main.rs  model.rs  openapi.rs  ratelimit.rs  session.rs  trace.rs
src/extract/: mod.rs  session.rs
src/route/: auth.rs  docs.rs  mod.rs  model.rs  posts.rs
src/route/auth/: keys.rs  mod.rs  model.rs  route.rs
src/route/key/: mod.rs  model.rs  route.rs
src/route/post/: mod.rs  model.rs  route.rs
