[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }
validator = { version = "0.18", features = ["derive"] }
