[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

[dependencies]
aide = { version = "0.13.4", features = ["axum", "macros", "scalar"] }
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.7", features = ["macros"] }
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
dotenvy = "0.15"
governor = "0.6"
schemars = { version = "0.8.20", features = ["chrono", "uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5", features = ["compression-full", "cors", "normalize-path", "trace"] }
tower_governor = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }
validator = { version = "0.18", features = ["derive"] }
